Запрос получения списка справочников

--- a/app/views/requests/new.html.haml
+++ b/app/views/requests/new.html.haml
@@ -1,2 +1,5 @@
-%h1 Новый запрос
-= render 'form'
+.panel.panel-primary
+  .panel-heading
+    %h1.panel-title Новый запрос
+  .panel-body
+    = render 'form'
