--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
         <li><%= link_to 'Архив запросов', requests_path %></li>
       </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 <div class="container">
   <div class="row">
     <%= yield %>
