--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Архив запросов', requests_path %></li>
+        <li><%= link_to 'Заявления', applications_path %></li>
       </ul>
     </div>
   </div>
