--- a/app/views/applications/show.html.haml
+++ b/app/views/applications/show.html.haml
@@ -2,7 +2,46 @@
 %h2 Перечень конкурсов
 %ol
   - @application.competitions.order(:priority).each do |competition|
-    %li= competition.competition_item.name
+    %li
+      = competition.competition_item.name
+      = " (#{@application.target_organization.target_organization_name})" if [7, 8, 9].include?(competition.competition_item_id) && @application.target_organization_id
+      = "- место в конкурсе - #{competition.rank}"
+%h2 Конкурсные баллы
+%table.table
+  %thead
+    %tr
+      %th Химия
+      %th Биология
+      %th Русский язык
+      %th Сумма
+  %tbody
+    %tr
+      %td= @application.chemistry
+      %td= @application.biology
+      %td= @application.russian
+      %td= @application.summa
+%p 
+  *Источник баллов - 
+  - case
+    - when @application.ege
+      ЕГЭ
+    - when @application.ege_additional
+      ЕГЭ в дополнительные сроки
+    - when @application.inner_exam
+      собственные испытания
+%h2= "Льготы" if @application.olympionic || @application.benefit
+%p= "Олимпиада" if @application.olympionic
+%p= "Особое право поступления" if @application.benefit
+%h2 Персональные данные
+%dl
+  %dt Пол
+  %dh= @application.gender_id == 1 ? "Мужской" : "Женский"
+  %dt Дата рождения
+  %dh= @application.birth_date
+  %dt Страна
+  %dh= @application.nationality_type_id
+  %dt Регион
+  %dh= @application.region_id
 %h2 Документы
 %dl
   - @application.identity_documents.each do |identity_document|
