--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to 'Архив запросов', requests_path %></li>
         <li><%= link_to 'Заявления', applications_path %></li>
+        <li><%= link_to 'Ошибки', errors_applications_path %></li>
       </ul>
     </div>
   </div>
