Отображение некоторых ошибок заявлений

--- a/app/views/applications/errors.html.haml
+++ b/app/views/applications/errors.html.haml
@@ -1,1 +1,14 @@
 %h1 Отчет об ошибках
+%h2 Повторяющиеся номера заявлений
+- @campaigns.each do |campaign|
+  %h3= campaign.name unless @errors[campaign][:dups_numbers].empty?
+  %ul
+    - @errors[campaign][:dups_numbers].each do |application|
+      %li= link_to "%04d" % application.application_number, application_path(application)
+%h2 Пропущенные целевики
+- @campaigns.each do |campaign|
+  %h3= campaign.name unless @errors[campaign][:empty_target_entrants].empty?
+  %ul
+    - @errors[campaign][:empty_target_entrants].each do |application_id|
+      - application = Application.find(application_id)
+      %li= link_to "%04d" % application.application_number, application_path(application)
