--- a/app/views/applications/errors.html.haml
+++ b/app/views/applications/errors.html.haml
@@ -1,16 +1,15 @@
 %h1 Отчет об ошибках
-%h2 Повторяющиеся номера заявлений
 - @campaigns.each do |campaign|
-  %h3= campaign.name unless @errors[campaign][:dups_numbers].empty?
+  %h2= campaign.name
+  %h3= "Повторяющиеся номера заявлений" unless @errors[campaign][:dups_numbers].empty?
   %ul
     - @errors[campaign][:dups_numbers].each do |applications|
       - applications.each do |application|
         %li= link_to "%04d" % application.application_number, application_path(application)
   %h2= "Пропущенные номера заявлений" unless @errors[campaign][:lost_numbers].empty?
   %p= @errors[campaign][:lost_numbers].join(', ')
-%h2 Пропущенные целевики
 - @campaigns.each do |campaign|
-  %h3= campaign.name unless @errors[campaign][:empty_target_entrants].empty?
+  %h2= "Пропущенные целевики" unless @errors[campaign][:empty_target_entrants].empty?
   %ul
     - @errors[campaign][:empty_target_entrants].each do |application_id|
       - application = Application.find(application_id)
