Отображение повторящихся абитуриентов

--- a/app/views/applications/errors.html.haml
+++ b/app/views/applications/errors.html.haml
@@ -8,9 +8,13 @@
         %li= link_to "%04d" % application.application_number, application_path(application)
   %h2= "Пропущенные номера заявлений" unless @errors[campaign][:lost_numbers].empty?
   %p= @errors[campaign][:lost_numbers].join(', ')
-- @campaigns.each do |campaign|
   %h2= "Пропущенные целевики" unless @errors[campaign][:empty_target_entrants].empty?
   %ul
     - @errors[campaign][:empty_target_entrants].each do |application_id|
       - application = Application.find(application_id)
       %li= link_to "%04d" % application.application_number, application_path(application)
+  %h2= "Повторяющиеся абитуриенты" unless @errors[campaign][:dups_entrants].empty?
+  %ul
+    - @errors[campaign][:dups_entrants].each do |k, v|
+      - v.each do |application|
+        %li= link_to "#{"%04d" % application.application_number} #{application.fio}", application_path(application)
