Генерация файла для проверки результатов ЕГЭ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
         <li><%= link_to 'Заявления', applications_path %></li>
         <li><%= link_to 'Ошибки', errors_applications_path %></li>
         <li><%= link_to 'Конкурс', competition_applications_path %></li>
+        <li><%= link_to 'Проверка ЕГЭ', ege_to_txt_applications_path %></li>
       </ul>
     </div>
   </div>
