--- a/app/views/applications/index.html.haml
+++ b/app/views/applications/index.html.haml
@@ -7,24 +7,21 @@
   = file_field_tag :file
   %br/
   = submit_tag "Загрузить рекомендованных", class: "btn btn-primary"
-= will_paginate @applications
-%table.table
+%table.table.datatable
   %thead
     %th Номер заявления
     %th Ф.И.О.
     %th Сумма баллов
-    %th Действия с заявлением
   %tbody
-  - @applications.each do |application|
-    - case
-      - when application.last_deny_day
-        - label_class = "label label-danger"
-      - when application.original_received_date
-        - label_class = "label label-success"
-      - else
-        - label_class = "label label-default"
-    %tr
-      %td= link_to "%04d" % application.application_number, application_path(application), class: label_class
-      %td= application.fio
-      %td= application.summa
-      %td
+    - @applications.each do |application|
+      - case
+        - when application.last_deny_day
+          - label_class = "label label-danger"
+        - when application.original_received_date
+          - label_class = "label label-success"
+        - else
+          - label_class = "label label-default"
+      %tr
+        %td= link_to "%04d" % application.application_number, application_path(application), class: label_class
+        %td= application.fio
+        %td= application.summa
