Added create and destroy of competitive_groups

--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -17,40 +17,7 @@
   %dd
     = @campaign.is_for_krym ? "да" : "нет"
 %h2 Конкурсные группы
-%ul
-  - @campaign.competitive_groups.each do |competitive_group|
-    %li
-      = competitive_group.name
-    %li
-      = "Курс #{competitive_group.course}"
-      %h3 Элемент конкурсной группы
-      %ul
-        - competitive_group.competitive_group_items.each do |competitive_group_item|
-          %li
-            = "уровень образования #{competitive_group_item.education_level_id}"
-            %br
-            = "направление подготовки - #{competitive_group_item.direction_id}"
-            %br
-            = "количество мест на целевой прием - #{competitive_group_item.number_target_o}"
-            %br
-            = "количество мест на прием по квоте - #{competitive_group_item.number_quota_o}"
-            %br
-            = "количество бюджетных мест на общий конкурс - #{competitive_group_item.number_budget_o}"
-            %br
-            = "количество внебюджетных мест - #{competitive_group_item.number_paid_o}"
-      %h3 Организация заказчик целевого приема
-      %ul
-        - competitive_group.target_organizations.each do |target_organization|
-          %li
-            = target_organization.target_organization_name
-            %ul
-              - target_organization.competitive_group_target_items.each do |competitive_group_target_item|
-                %li
-                  = "направление подготовки - #{competitive_group_target_item.direction_id}"
-                  %br
-                  = "уровень образования - #{competitive_group_target_item.education_level_id}"
-                  %br
-                  = "количество мест на целевой прием - #{competitive_group_target_item.number_target_o}"
+= render 'competitive_groups/competitive_groups'
 %h2 Формы обучения
 %ul
   - @campaign.education_forms.each do |education_form|
