--- a/app/views/campaigns/_form.html.haml
+++ b/app/views/campaigns/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@campaign, data: {remote: true}, id: "form") do |f|
+= form_for(@campaign, data: {remote: true}) do |f|
   .form-group
     = f.label :name, 'Имя кампании'
     %br
