Added create and destroy of competitive_group_items

--- a/app/views/competitive_groups/_competitive_group.html.haml
+++ b/app/views/competitive_groups/_competitive_group.html.haml
@@ -4,21 +4,8 @@
     %span.glyphicon.glyphicon-remove{"aria-hidden" => "true"}
 %li
   = "Курс #{competitive_group.course}"
-  %h3 Элемент конкурсной группы
-  %ul
-    - competitive_group.competitive_group_items.each do |competitive_group_item|
-      %li
-        = "уровень образования #{competitive_group_item.education_level_id}"
-        %br
-        = "направление подготовки - #{competitive_group_item.direction_id}"
-        %br
-        = "количество мест на целевой прием - #{competitive_group_item.number_target_o}"
-        %br
-        = "количество мест на прием по квоте - #{competitive_group_item.number_quota_o}"
-        %br
-        = "количество бюджетных мест на общий конкурс - #{competitive_group_item.number_budget_o}"
-        %br
-        = "количество внебюджетных мест - #{competitive_group_item.number_paid_o}"
+  #competitive_group_items
+  = render partial: 'competitive_group_items/competitive_group_items', locals: { competitive_group: competitive_group }
   %h3 Организация заказчик целевого приема
   %ul
     - competitive_group.target_organizations.each do |target_organization|
