Added create and destory competitive_group_target_item

--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -17,7 +17,8 @@
   %dd
     = @campaign.is_for_krym ? "да" : "нет"
 %h2 Конкурсные группы
-= render 'competitive_groups/competitive_groups'
+#competitive_groups
+  = render 'competitive_groups/competitive_groups'
 %h2 Формы обучения
 %ul
   - @campaign.education_forms.each do |education_form|
