--- a/app/views/competitive_group_target_items/_form.html.haml
+++ b/app/views/competitive_group_target_items/_form.html.haml
@@ -1,6 +1,6 @@
-= form_for(competitive_group.competitive_group_target_items.new, html: {class: "form_inline pull-rigth"}, data: {remote: true}) do |f|
+= form_for(competitive_group.competitive_group_target_items.new, html: {class: "form_inline pull-rigth"}) do |f|
   .form-group
-    = f.text_field :competitive_group_target_id, value: competitive_group.id, class: "form-control hidden"
+    = f.text_field :competitive_group_id, value: competitive_group.id, class: "form-control hidden"
   .form-group
     = f.label :direction_id, 'Специальность'
     = f.select :direction_id, options_for_select({"Лечебное дело" => 438, "Педиатрия" => 441, "Стоматология" => 470}), {:include_blank => ''}, {class: "form-control", placeholder: "Направление подготовки"}
