--- a/app/views/applications/show.html.haml
+++ b/app/views/applications/show.html.haml
@@ -12,8 +12,11 @@
   - @application.competitions.order(:priority).each do |competition|
     %li
       = competition.competition_item.name
-      = " (#{@application.target_organization.target_organization_name})" if [7, 8, 9].include?(competition.competition_item.code) && @application.target_organization_id
-      = competition.rank
+      - if [7, 8, 9].include?(competition.competition_item.code) && @application.target_organization_id
+        = " (#{@application.target_organization.target_organization_name})"
+        = competition.rank_target
+      - else
+        = competition.rank
       %span.label.label-info= "рекомендован к зачислению #{competition.recommended_date}" if competition.recommended_date
       %span.label.label-success= "зачислен #{competition.admission_date}" if competition.admission_date
 %h2 Конкурсные баллы
