Remove admissed from one_list

--- a/app/views/applications/competition_one_list.xls.haml
+++ b/app/views/applications/competition_one_list.xls.haml
@@ -41,7 +41,7 @@
             %Data{"ss:Type" => "String"} Приоритеты конкурсов
         - n = 0
         - applications.each do |a, h|
-          - unless.h[:competitions].empty?
+          - unless h[:competitions].empty?
             - n += 1
             %Row
               %Cell
